section-container height issue on mobile

--- a/css/style.less
+++ b/css/style.less
@@ -815,6 +815,9 @@ header {
 	}
 	.section-container {
 		height:100vh;
+		@media(max-width:767px) {
+			height:auto;
+		}
 		width:100%;
 		padding:0px 15px;
 		margin:0;
